@@ -20,11 +20,12 @@ import java.io.IOException;
 import java.io.OutputStream;
 import org.apache.lucene.store.IndexOutput;
 
-public class PropertiesOutputStream extends OutputStream {
+/** Wraps an {@link IndexOutput} to expose it as an {@link OutputStream}. */
+public class IndexOutputOutputStream extends OutputStream {
 
-  private IndexOutput out;
+  private final IndexOutput out;
 
-  public PropertiesOutputStream(IndexOutput out) {
+  public IndexOutputOutputStream(IndexOutput out) {
     this.out = out;
   }
 
@@ -34,8 +35,12 @@ public class PropertiesOutputStream extends OutputStream {
   }
 
   @Override
+  public void write(byte[] b, int off, int len) throws IOException {
+    out.writeBytes(b, off, len);
+  }
+
+  @Override
   public void close() throws IOException {
-    super.close();
     out.close();
   }
 }
