@@ -205,6 +205,9 @@ Other Changes
 
 * SOLR-17217: Simplify verbose MatcherAssert.assertThat usage in tests (hossman)
 
+* SOLR-17232: PropertiesOutputStream is renamed IndexOutputOutputStream and overrides write(byte[], int, int).
+  (Bruno Roustant)
+
 ==================  9.5.0 ==================
 New Features
 ---------------------
